# 2025-walrus-hackathon

./: .env.example  .gitignore  API_FLOW.md  AUDITOR.md  AUDIT_FEATURE_PLAN.md  Contract_Spec.md  DEAL_MANAGEMENT_COMPLETE.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  USER_FLOW.md  WALRUS_SEAL_API.md  next.config.ts  package-lock.json  package.json
app/: globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
app/(frontend)/deals/: page.tsx
app/(frontend)/landing/: page.tsx
app/(frontend)/reviews/: page.tsx
app/(frontend)/settlements/: page.tsx
app/api-docs/: page.tsx
app/api/openapi/: route.ts
app/deals/: page.tsx
app/deals/[dealId]/: page.tsx
app/deals/create/: page.tsx
app/reviews/: page.tsx
docs/: WALRUS_SEAL_API.md  _base.yaml
docs/schemas/: common.yaml  dashboard.yaml  deal.yaml  errors.yaml  kpi.yaml  period.yaml  seal.yaml  tee.yaml  walrus.yaml
docs/v1/: dashboard.yaml  deals.yaml  health.yaml  kpi.yaml  nautilus.yaml  parameters.yaml  seal.yaml  settlement.yaml  tee.yaml  timeline.yaml  walrus-blobs.yaml  walrus.yaml
move/earnout/: Move.toml  README.md
move/earnout/sources/: earnout.move  seal_policy.move
nautilus/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  TEE_INTEGRATION_DESIGN.md  kpi_calculator.rs  test-api-quick.sh
scripts/: test-seal-service.ts  test-sui-service.ts  test-walrus-service.ts
src/backend/contracts/: Move.toml  README.md
src/components/: ConnectWallet.tsx
src/contracts/: Move.toml  README.md
src/hooks/: useCreateDeal.ts  useDeal.ts  useDeals.ts  useSuiTransaction.ts
(+173 files in other folders)
